# procedural-terrain

./: CMakeLists.txt  LICENSE  build.sh  canyon-LOD.lua  canyon.lua  clean.sh  config.lua  desert.lua  landscape-LOD.lua  landscape.lua  run
modules/: FindGLEW.cmake  FindSFML.cmake
resources/: resources
resources/shaders/: basicShader.fs  basicShader.vs  basicTerrain.fs  basicTerrain.vs  phongShader.fs  phongShader.vs  phongTerrain.fs  phongTerrain.vs
src/: CoreEngine.cpp  CoreEngine.hpp  land.vim  main.cpp  main.hpp
src/core/: Input.hpp  ReferenceCounted.hpp  Transform.cpp  Transform.hpp  Vertex.cpp  Vertex.hpp
src/debug/: Debug.cpp  Debug.hpp  Logger.cpp  Logger.hpp  Timer.cpp  Timer.hpp
src/entity/: Camera.cpp  Camera.hpp  FreeLook.cpp  FreeLook.hpp  FreeMove.cpp  FreeMove.hpp  IEntComponent.cpp  IEntComponent.hpp  IEntity.cpp  IEntity.hpp  Skydome.cpp  Skydome.hpp
src/generator/: .Landscape.cpp.swp  Chunk.cpp  Chunk.cpp-old  Chunk.hpp  Generator.cpp  Generator.hpp  Landscape.cpp  Landscape.cpp-old  Landscape.hpp  TerrainCell.cpp  TerrainCell.hpp
src/generator/noises/: PerlinNoise.cpp  PerlinNoise.hpp  ValueNoise.cpp  ValueNoise.hpp
src/rendering/: BasicShader.cpp  BasicShader.hpp  BasicTerrainShader.cpp  BasicTerrainShader.hpp  Display.cpp  Display.hpp  IShader.cpp  IShader.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  PhongShader.cpp  PhongShader.hpp  PhongTerrainShader.cpp  PhongTerrainShader.hpp  RenderEngine.cpp  RenderEngine.hpp  Texture.cpp  Texture.hpp
src/static_libs/: obj_loader.cpp  obj_loader.h
src/utils/: Lua.cpp  Lua.hpp
